Updating with review comments

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -559,12 +559,16 @@
     "           \n",
     "__Question 4:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  If you chose to use the hinted architecture above, describe why you think that CNN architecture should work well for the image classification task.\n",
     "\n",
-    "__Answer:__  The CNN architecture used in this project (Find below) draws motivations from the one above. This architecture uses the CNN pattern that is used in several other well known CNN models like VGG16 etc. The idea to combine a conv and max pool layer, and use multiple of those units in sequence. The conv layer increases the depth, which keeping the width/heigh the same, whereas the max pooling layer decreases the scale of the image by 2 everytime, keeping depth the same. The CNN learns much more complex features with every layer. For ex:\n",
+    "__Answer:__  The CNN architecture used in this project (Find below) draws motivations from the one above. This architecture uses the CNN pattern that is used in several other well known CNN models like VGG16 etc. \n",
+    "\n",
+    "The idea to combine a conv and max pool layer, and use multiple of those units in sequence. The conv layer increases the depth (filter maps) keeping the width/heigh the same, whereas the max pooling layer decreases the scale of the image by 2 everytime keeping depth the same, which ensures that the number of parameters are reduced. In this CNN architecture 4 sets of conv/pool layers with **relu activation** have been used, followed by a dropout layer that helps with regularization & ensures generalization, followed by a Global Average Pooling that helps in sharply reducing the overall number of parameters training the model faster without too much loss of accuracy. Finally, a Dense layer with **softmax activation** is used to predict the 133 dog breeds.\n",
+    "\n",
+    "The CNN learns much more complex features with every layer. For ex:\n",
     "\n",
     "* 1st Layer: Colors or Edges\n",
     "* 2nd Layer: Shapes like circles, stripes, and rectangles\n",
-    "* 3rd Layer: More complex features: grids, wheels, and even faces\n",
-    "* 4th Layer and so on: entire objects\n",
+    "* 3rd Layer: More complex features like grids, wheels, and even faces\n",
+    "* 4th Layer and so on: entire objects like dogs, cats, cars, humans etc\n",
     "\n",
     "With 3 conv/pool layers, accuracy achieved was around 10%, and with 4 conv/pool layers accuracy is around 19.5%."
    ]
@@ -846,13 +850,7 @@
       "6660/6680 [============================>.] - ETA: 0s - loss: 3.4677 - acc: 0.1812Epoch 00055: val_loss did not improve\n",
       "6680/6680 [==============================] - 27s - loss: 3.4703 - acc: 0.1807 - val_loss: 3.7634 - val_acc: 0.1281\n",
       "Epoch 57/100\n",
-      "6660/6680 [============================>.] - ETA: 0s - loss: 3.4568 - acc: 0.1824Epoch 00056: val_loss did not improve\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "6660/6680 [============================>.] - ETA: 0s - loss: 3.4568 - acc: 0.1824Epoch 00056: val_loss did not improve\n",
       "6680/6680 [==============================] - 27s - loss: 3.4560 - acc: 0.1825 - val_loss: 3.7323 - val_acc: 0.1485\n",
       "Epoch 58/100\n",
       "6660/6680 [============================>.] - ETA: 0s - loss: 3.4441 - acc: 0.1791Epoch 00057: val_loss improved from 3.71860 to 3.69711, saving model to saved_models/weights.best.from_scratch.hdf5\n",
@@ -1878,9 +1876,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:python3]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-python3-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1892,7 +1890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
