Updating Review Comment

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -1372,7 +1372,9 @@
     "   \n",
     "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem.\n",
     "\n",
-    "__Answer:__ \n",
+    "__Answer:__  The model takes Inception_V3 model, strips off the final softmax layer, and adds 1) Global Average Pooling Layer (used to reduce the parameters of the model, and yet provide a very good accuracy) and 2) Dense Layer with softmax activation to predict the 133 dog breeds. \n",
+    "\n",
+    "Bottleneck features using Inception_V3 are passed as input to this model.\n",
     "\n"
    ]
   },
